# reasonguard

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  REASONGUARD_PROJECT_SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  batch_eval.py
grafana/dashboards/: reasonguard.json
prometheus/: prometheus.yml
src/reasonguard/: __init__.py  cache.py  calibration.py  cascade.py  config.py  main.py  metrics.py  models.py  proxy.py  trace_parser.py
src/reasonguard/scoring/: hvr.py  markers.py  mi_proxy.py  pipeline.py  selfdoubt.py  verbalized.py
tests/: test_api.py  test_calibration.py  test_cascade.py  test_hvr.py  test_markers.py  test_mi_proxy.py  test_selfdoubt.py  test_trace_parser.py  test_verbalized.py
