[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasonguard"
version = "0.1.0"
description = "Production-ready FastAPI middleware that scores the reliability of reasoning LLM output"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "prometheus-client>=0.21",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reasonguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
